# xml-pipeline

./: .env.example  .gitignore  README.md  README.md.bak  README.v1.md  __init__.py  dummy_file.md  pyproject.toml  run_organism.py  structure.md
agentserver/: agentserver.py  llm_connection.py  message_bus.py
agentserver/agents/examples/: echo_chamber.py
agentserver/config/: __init__.py
agentserver/console/: __init__.py  editor.py  secure_console.py  tui_console.py
agentserver/listeners/: base.py  llm_listener.py
agentserver/listeners/examples/: echo_chamber.py  grok_personality.py
agentserver/llm/: __init__.py  backend.py  router.py
agentserver/memory/: __init__.py  context_buffer.py
agentserver/message_bus/: __init__.py  message_state.py  stream_pump.py
agentserver/message_bus/steps/: deserialization.py  envelope_validation.py  payload_extraction.py  routing_resolution.py  thread_assignment.py
agentserver/platform/: __init__.py  llm_api.py
agentserver/primitives/: boot.py
agentserver/privileged/: models.py
agentserver/schema/: envelope.xsd  priviledged-msg.xsd  privileged-msg.xsd
agentserver/utils/: message.py
config/: organism.yaml
docs/: AgentServer.md  Local Privilege only.md  agentserver_api_spec.md  configuration.md  core-principles-v2.0.md  core-principles-v2.1.md  doc_cross_check.md  growth-suggestions.md  handler-contract-v2.1.md  listener-class-v2.1.md  llm-router-v2.1.md  message-pump.md  native_tools.md  primitives.md  secure-console-v3.md  self-grammar-generation.md  self_registration.md
handlers/: __init__.py  console.py  hello.py
tests/: conftest.py  test_context_buffer.py  test_pipeline_steps.py  test_pump_integration.py
tests/scripts/: generate_organism_key.py
